# youtube-analytics-project

./: pyproject.toml
src/: apisettings.py  channel.py  playlist.py  video.py
