[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["medivh <bochkarev.s.e@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.109.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
